--- a/frontend/src/pages/dashboard/style.css
+++ b/frontend/src/pages/dashboard/style.css
@@ -1,3 +1,6 @@
+.dashboard {
+    margin: 0 auto;
+}
 .row {
     display: flex;
     justify-content: space-between;
@@ -6,9 +9,12 @@
 .diagramsColumn {
     display: flex;
     flex-direction: column;
+    width: 65%;
 }
 .diagramsRow {
     display: flex;
+    gap: 1em;
+    margin-top: 4em;
 }
 .aside {
     display: flex;
