--- a/frontend/src/components/linePeriod/style.css
+++ b/frontend/src/components/linePeriod/style.css
@@ -8,3 +8,10 @@
     width: 10%;
     padding: 0.5em 0 0 2em;
 }
+
+.widget-sessions__cursor {
+    background-color: #000;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+}
