--- a/frontend/src/components/radialScore/style.css
+++ b/frontend/src/components/radialScore/style.css
@@ -12,14 +12,16 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    bottom: 5em;
+    bottom: 6em;
     right: 35%;
 }
 .score {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 700;
 }
 .description {
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
+    color: #74798c;
+    font-weight: 500;
 }
