--- a/frontend/src/pages/reglage/style.css
+++ b/frontend/src/pages/reglage/style.css
@@ -2,4 +2,17 @@
     display: flex;
     flex-direction: column;
     margin: 2em auto;
+    gap: 1em;
+}
+button {
+    border-radius: 10px;
+    border: none;
+    padding: 0.5em;
+    font-size: 1em;
+    transition: transform 0.5s; /* Ajoute une transition fluide */
+}
+button:hover {
+    background-color: red;
+    color: #fff;
+    transform: scale(1.1); /* Agrandit le bouton de 10% au survol */
 }
