--- a/frontend/src/pages/accueil/accueil.css
+++ b/frontend/src/pages/accueil/accueil.css
@@ -9,4 +9,9 @@
     color: #fff;
     padding: 0.5em 1em;
     border-radius: 5px;
+    border: none;
+    transition: transform 0.5s;
+}
+.linkButton:hover {
+    transform: scale(1.1);
 }
